# server-ux

./: .copier-answers.yml  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .travis.yml  README.md  oca_dependencies.txt  requirements.txt  test-requirements.txt
announcement/: README.rst  __manifest__.py
announcement_dialog_size/: README.rst  __manifest__.py
approvals_tier_validation/: __manifest__.py
barcode_action/: README.rst  __init__.py  __manifest__.py
base_action_visibility_restriction/: README.rst  __manifest__.py
base_action_visibility_restriction_domain/: README.rst  __manifest__.py  hooks.py
base_archive_date/: README.rst  __manifest__.py
base_archive_security/: README.rst  __manifest__.py  hooks.py
base_automation_team_activity/: README.rst  __init__.py  __manifest__.py
base_binary_url_import/: README.rst  __manifest__.py
base_cancel_confirm/: README.rst  __init__.py  __manifest__.py
base_custom_filter/: README.rst  __init__.py  __manifest__.py
base_delegation/: README.rst  __manifest__.py
base_disable_field_translate/: __manifest__.py
base_duplicate_security_group/: README.rst  __manifest__.py
base_dynamic_report_field_selection/: __manifest__.py
base_export_manager/: README.rst  __manifest__.py  __openerp__.py  hooks.py
base_field_access_right/: README.rst  __manifest__.py
base_field_deprecated/: README.rst  __manifest__.py  hooks.py
base_filter_hidden/: README.rst  __manifest__.py
base_hide_menu/: __manifest__.py
base_import_image_url_user/: README.rst  __manifest__.py
base_import_security_group/: README.rst  __manifest__.py
base_ir_actions_report_sequence/: README.rst  __manifest__.py
base_ir_actions_sequence/: README.rst  __manifest__.py
base_live_update/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+2004 files in other folders)
