[project]
name = "odoo-addons-oca-server-ux"
version = "17.0.20240110.0"
dependencies = [
    "odoo-addon-base_technical_features>=17.0dev,<17.1dev",
    "odoo-addon-base_tier_validation>=17.0dev,<17.1dev",
    "odoo-addon-date_range>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
