[project]
name = "odoo-addons-oca-server-ux"
version = "17.0.20240506.0"
dependencies = [
    "odoo-addon-base_revision>=17.0dev,<17.1dev",
    "odoo-addon-base_search_custom_field_filter>=17.0dev,<17.1dev",
    "odoo-addon-base_technical_features>=17.0dev,<17.1dev",
    "odoo-addon-base_tier_validation>=17.0dev,<17.1dev",
    "odoo-addon-base_tier_validation_formula>=17.0dev,<17.1dev",
    "odoo-addon-date_range>=17.0dev,<17.1dev",
    "odoo-addon-date_range_account>=17.0dev,<17.1dev",
    "odoo-addon-sequence_reset_period>=17.0dev,<17.1dev",
    "odoo-addon-server_action_mass_edit>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
